<resources>
    <string name="app_name">GithubLister</string>
    <string name="notImplemented">Not Implementated</string>
    <string name="empty_repo_list">There is no repo. \n Something is wrong with network.</string>
    <string name="repo_list_label">Github Repo List</string>
    <string name="menu_action_close">close</string>
    <string name="menu_action_branch">branch</string>
    <string name="fork">Fork :%s</string>
    <string name="stars">Stars :%d</string>
    <string name="forks">Forks :%d</string>
    <string name="watches">Watches :%d</string>
    <string name="contributors">Contributors</string>
    <string name="details">details</string>
    <string name="branches">Branches</string>
    <string name="issues">Issues</string>
    <string name="prs">Pull Requests</string>
    <string name="repo_detail_label">Github Repo Detail</string>
    <string name="contributor_detail">ContributorsDetail</string>
    <string name="branch_detail">Branch Detail</string>
    <string name="issue_detail">Issue Detail</string>
    <string name="pull_detail">Pull Request Detail</string>
    <string name="search_hint">search repository</string>
</resources>
