<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_github_graph"
            app:startDestination="@id/repoListFragment"
            tools:ignore="UnusedNavigation">

    <fragment
            android:id="@+id/repoListFragment"
            android:name="com.qifan.githublister.ui.feature.repo.list.RepoListFragment"
            android:label="@string/repo_list_label"
            tools:layout="@layout/fragment_repo_list_layout">
        <action android:id="@+id/action_repoListFragment_to_repoDetailFragment"
                app:destination="@id/repoDetailFragment"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_right"
                app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_repoListFragment_to_searchFragment"
                app:destination="@id/searchFragment"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_right"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment android:id="@+id/repoDetailFragment"
              android:name="com.qifan.githublister.ui.feature.repo.detail.RepoDetailFragment"
              android:label="@string/repo_detail_label"
              tools:layout="@layout/fragment_repo_detail_layout">

        <argument android:name="owner" app:argType="string"/>
        <argument android:name="repo" app:argType="string"/>
        <action android:id="@+id/action_repoDetailFragment_to_contributorFragment"
                app:destination="@id/contributorFragment"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_right"
                app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_repoDetailFragment_to_branchFragment"
                app:destination="@id/branchFragment"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_right"
                app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_repoDetailFragment_to_issueFragment"
                app:destination="@id/issueFragment"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_right"
                app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_repoDetailFragment_to_pullFragment"
                app:destination="@id/pullFragment"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_right"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment android:id="@+id/contributorFragment"
              android:name="com.qifan.githublister.ui.feature.repo.detail.contributor.ContributorFragment"
              android:label="@string/contributor_detail"
              tools:layout="@layout/fragment_list_layout">
        <argument android:name="owner" app:argType="string"/>
        <argument android:name="repo" app:argType="string"/>
    </fragment>
    <fragment android:id="@+id/branchFragment"
              android:name="com.qifan.githublister.ui.feature.repo.detail.branch.BranchFragment"
              android:label="@string/branch_detail"
              tools:layout="@layout/fragment_list_layout">
        <argument android:name="owner" app:argType="string"/>
        <argument android:name="repo" app:argType="string"/>
    </fragment>
    <fragment android:id="@+id/issueFragment"
              android:name="com.qifan.githublister.ui.feature.repo.detail.issue.IssueFragment"
              android:label="@string/issue_detail"
              tools:layout="@layout/fragment_list_layout">
        <argument android:name="owner" app:argType="string"/>
        <argument android:name="repo" app:argType="string"/>
    </fragment>

    <fragment
            android:id="@+id/pullFragment"
            android:name="com.qifan.githublister.ui.feature.repo.detail.pull.PullFragment"
            android:label="@string/pull_detail"
            tools:layout="@layout/fragment_list_layout">
        <argument android:name="owner" app:argType="string"/>
        <argument android:name="repo" app:argType="string"/>
    </fragment>
    <fragment android:id="@+id/searchFragment" android:name="com.qifan.githublister.ui.feature.search.SearchFragment"
              android:label="SearchFragment">
        <action android:id="@+id/action_searchFragment_to_repoDetailFragment"
                app:destination="@id/repoDetailFragment"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_right"
                app:popExitAnim="@anim/slide_out_right"/>
        <argument android:name="query" app:argType="string"/>
    </fragment>

</navigation>